--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <section id="home">
         <div class="main">
             <h1 class="headings">Hello, I’m <span>Ankita Kataria</span></h1>
-            <p>I’m 2nd year cs student at Dronacharya College of Engineering,Gurgaon.</p>
+            <p>I’m 3rd year cs student at Dronacharya College of Engineering,Gurgaon.</p>
             <a href="./Ankita_Kataria_resume (3).pdf" target="_blank" class="btn">Download CV</a>
 
         </div>
